--- a/README
+++ b/README
@@ -131,8 +131,10 @@ To summarize, the primary ext4 changes are added as follows:
 * Truncation in indirect.c, and extents.c (including punch_hole)
     where resetting mtime = ctime = current time...
 
-Note: we disable printing at the end (after testing) to prevent
-watchdog from getting triggered.
+Note: we disabled watchdog, which is a mechanism (process) that triggers
+a system shutdown if it finds that any of the other processes are hogging
+system resources. This makes it easier to test, and in case of "extended"
+proc-maps may be necessary.
 
 SAMPLE OUTPUT OF file_loc in the creation of different files:
 =============================================================
@@ -145,27 +147,27 @@ hmwk6.fs with files reflecting the first unique GPS coordinates. We
 duplicated that image into "hmwk6-1.fs", and represent three unique
 GPS coordinates in the more recent copy "hmwk6-2.fs".
 
-// not a gps_aware_inode ext4 mount point //
+----not a gps_aware_inode ext4 mount point----
 
 root@flo:/data/misc # ./file_loc hmwk6
 Pathname: hmwk6.
 Error[19]: No such device
 
-// no such file //
+----no such file----
 
 255|root@flo:/data/misc # ./file_loc bogus_file
 Pathname: bogus_file.
 Error[2]: No such file or directory
 
-// gps_aware_inode but no daemon activated so far //
-// both kernel error [19] ENODEV and accuracy is 0 //
+----gps_aware_inode but no daemon activated so far----
+----both kernel error [19] ENODEV and accuracy is 0----
 
 127|root@flo:/data/misc # ./file_loc hmwk6
 Pathname: hmwk6.
 Error: No such device (accuracy is zero).
 
-// finally, the expected output, with age in NANOSECONDS //
-// we know that since the daemon is currently running Hz //
+----finally, the expected output, with age in NANOSECONDS----
+----we know that since the daemon is currently running Hz----
 
 root@flo:/data/misc # ./file_loc hmwk6/file
 Pathname: hmwk6/file.
@@ -175,9 +177,9 @@ Accuracy: 30.000000
 Age: 150146485
 URL: https://www.google.com/maps/@40.802966,-73.956366,15z
 
-// we kill the daemon and touch a new file in the directory //
-// Many seconds have elapsed since the daemon last updated //
-// the kernel with userland polled gps location data //
+----we kill the daemon and touch a new file in the directory----
+----Many seconds have elapsed since the daemon last updated----
+----the kernel with userland polled gps location data----
 
 root@flo:/data/misc # ./file_loc hmwk6
 Pathname: hmwk6.
@@ -187,11 +189,11 @@ Accuracy: 30.000000
 Age: 14
 URL: https://www.google.com/maps/@40.802966,-73.956366,15z
 
-// We reboot and preserve the same data. //
-// By rebooting, remounting and making more modifications, //
-// we get the 2nd and 3rd unique GPS locations! Note also, //
-// we symlink (both hard and soft). Check the round_2 files //
-// also saved in hmwk6-prog/hmwk6_fs_sample/ //
+----We reboot and preserve the same data.----
+----By rebooting, remounting and making more modifications,----
+----we get the 2nd and 3rd unique GPS locations! Note also,----
+----we symlink (both hard and soft). Check the round_2 files----
+----also saved in hmwk6-prog/hmwk6_fs_sample/----
 
 root@flo:/data/misc/hmwk6 # ../file_loc d
 Pathname: d.
@@ -264,10 +266,10 @@ Accuracy: 24.414000
 Age: 350341798
 URL: https://www.google.com/maps/@40.802987,-73.956371,15z
 
-// As a last example, we change permissions and try file_loc. //
-//  See _round_3 tests in hmwk6-prog/hmwk6_fs_sample/ for   //
-//   a repetition of all hmwk6 file loc and age readings  //
-// (they should not have changed from the previous files) //
+----As a last example, we change permissions and try file_loc.----
+---- See _round_3 tests in hmwk6-prog/hmwk6_fs_sample/ for  ----
+----  a repetition of all hmwk6 file loc and age readings  ----
+----(they should not have changed from the previous files)----
 
 root@flo:/data/misc # ./file_loc hmwk6/file
 Pathname: hmwk6/file.
@@ -285,5 +287,5 @@ Error[13]: Permission denied
 
 255|root@flo:/data/misc #
 
-// We save the most up-to-date hmwk6.fs image as hmwk6-3.fs //
+----We save the most up-to-date hmwk6.fs image as hmwk6-3.fs----
 
