--- a/README
+++ b/README
@@ -1,9 +1,10 @@
 Author: Sami Mourad
 
-CONFIG_GPSFS:
-    enabled by default.
-    defined in arch/arm/Kconfig.
-    used to add and compile in kernel changes made to the ext4 FS.
+flo-kernel/arch/arm/configs/flo_defconfig:
+    CONFIG_GPSFS:
+        enabled by default.
+        defined in arch/arm/Kconfig.
+        used to add and compile in kernel changes made to the ext4 FS.
 
 PART I:
 
