--- a/README
+++ b/README
@@ -153,7 +153,9 @@ We inserted the data members to the inode struct, and inserted code to
 update them in functions which we do not explicitly call elsewhere, and
 our additions simply read gps coordinates and timestamp from the gps
 struct and update the inode struct with that data (O(1) operation,
-we do use a lock but surely cause no deadlocks, no contention, etc.).
+we do use a lock but surely cause no deadlocks, no contention, i.e.
+in principle or so we think / at the least not with the manual creation
+and deletion of files, but we have not written stress tests [...] ).
 
 With the changes we made, gps coordinate and timestamp data are
 only updated when modifications are made to the "on-disk" ext4_inode
